--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Random Image Feed</title>
 </head>
 <body>
-
+    <h1>Random Image Feed</h1>
+    <div class="container"></div>
 
     <script src="script.js"></script>
 </body>
